# SonicGD

./: CMakeLists.txt
src/: main.c
src/common/: gl_error_wrapper.h
src/engine/: CMakeLists.txt
src/engine/common/: CMakeLists.txt  gl_error_wrapper.c
src/engine/loader/: CMakeLists.txt  loader.h
src/engine/loader/win/: loader.c
src/engine/shader/: shader.c  shader.h
src/engine/window/: CMakeLists.txt  window.c
src/loader/: loader.h
src/loader/win/: loader.c
src/shader/: CMakeLists.txt  shader.c  shader.h
src/window/: CMakeLists.txt  resize_callback.c  window.h
